--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
 </head>
+
 <body>
     <header>
         <h1>The Daniels - Their Film and Me</h1>
     </header>
+    <hr>
     <nav>
-        <a href="index.html">Home</a>
+      <a href="index.html">Home</a>
     </nav>
+
     <main>
         <h2>The Daniels</h2>
         <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson College in
-        Boston and began collaborating on various projects. Their breakthrough came with their short film "Interesting Ball"
+        Boston and began collaborating on various projects. Their breakthrough came with their short film <q>Interesting Ball</q></p>
         (2008), which gained viral attention online. It showcased their quirky humor and distinctive visual style, setting the
         tone for their future work.</p>
         <p>Their unique approach to filmmaking has earned them a dedicated fanbase and critical acclaim within the industry,
         solidifying their reputation as innovative and boundary-pushing directors.</p>
         <h2>Their Movie</h2>
-        <p>The movie, "Everything Everywhere All At Once", was a spectacular display of physics, mathematics, and art. Sharing
+        <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing
         about this movie, is me sharing about subjects that interest me.</p>
         <section>
             <h3>Physics</h3>
@@ -34,18 +37,18 @@
         </section>
         <section>
             <h3>Mathematics</h3>
-            <p>The subject of infinity and infinite universes, known as the multiverse, was presented in an intense yet whimsical way.Expressing the concept of infinity entertainment injects excitement into the subject matter, triggering in interest in a wider audience.</p>
+            <p>The subject of infinity and infinite universes, known as the multiverse, was presented in an intense yet whimsical way. Expressing the concept of infinity entertainment injects excitement into the subject matter, triggering in interest in a wider audience.</p>
             <p>The multi-step process for multiverse jumping (also known as verse jumping) introduces the concept of algorithms.
             Algorithms are used in solving problems in mathematics and logic.</p>
             <p>The use of charts in quantifying levels of skill for each version of a character involves presenting numbers in a
             graphical way.</p>
         </section>
         <section>
-            <h3>Art</h3>
+          <h3>Art</h3>
             <p>Born in 1970 in Los Angeles, Kurata grew up in the San Gabriel Valley,[1] the youngest of four children.[4] Her parents owned a laundromat.[4] She is Japanese American.[5]</p>
-            <p>For Everything Everywhere All at Once, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the "main" universe to other parts of the multiverse.[11][4] For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget.[12] Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to "Just go crazy, get creative", and that they aimed to create costumes that viewers would wear on Halloween.[12]</p>
-            <p>According to The Hollywood Reporter, Kurata "subverted and reclaimed Asian-centric tropes" in styling the "outrageously outfitted personas" of Hsu's character, villain Jobu Tupaki,[13] to whom Kurata has said she relates.[4] Jobu Tupaki's many looks in the film include "Golfer Jobu" who wears a pink argyle vest and socks,[13] exemplifying "the perfect Asian daughter who excels at sports and everything else in her life" according to Kurata.[11] "Elvis Jobu", on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother.[11] Another is "Goth Jobu", who wears an "all-black and a vinyl A-line miniskirt over a sheer tulle petticoat", which The Hollywood Reporter notes is "a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita."[13] Yet another look is "Jobu K-Pop Star", influenced by K-pop and Harajuku street style.[13]</p>
-            <p>CBS News said the film's "gravitas" would not have been possible "without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata".[14] Insider observed that the film's costumes were "more than just clothes", since they convey "different iterations of each character" and "[place] the viewer in the numerous multiverses traversed throughout the film."[15]</p>
+            <p>For <q>Everything Everywhere All at Once</q>, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the <q>main</q> universe to other parts of the multiverse.[11][4] For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget.[12] Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to <q>Just go crazy, get creative</q>, and that they aimed to create costumes that viewers would wear on Halloween.[12]</p>
+            <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki,[13] to whom Kurata has said she relates.[4] Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks,[13] exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata.[11] <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother.[11] Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q>[13] Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.[13]</p>
+            <p>CBS News said the film's <q>gravitas</q> would not have been possible "without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>.[14] Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q>[15]</p>
         </section>
         <h2>Me</h2>
         <p>This class is answering questions of mine about:
@@ -56,7 +59,13 @@
         How to begin using ChatGPT</p>
         <p>This course assists in expanding my knowledge and skill set in the world of IT.</p>
 </main>
+<hr>
 <footer>
-    <p>footer content</p>
+    <pre>
+      <strong>Physical Address</strong>
+      
+      123 Do-ray-me Rd.
+      Piccadilly, NY 01234
+    </pre>
 </body>
 </html>
