Added all same-page links in navigation area

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <hr>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="#Daniels">The Daniels</a> | <a href="#Physics">Physics</a> | <a href="#Mathematics">Mathematics</a> | <a href="#Art">Art</a> | <a href="#Me">Me</a>
     </nav>
 
     <main>
@@ -22,7 +22,7 @@
         <h2>Their Movie</h2>
         <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing
         about this movie, is me sharing about subjects that interest me.</p>
-        <section>
+        <section id="Physics">
             <h3>Physics</h3>
             <p>Physicists Max Tegmark and Brian Greene have proposed different classification schemes for multiverses and universes.
             Tegmark's four-level classification consists of Level I: an extension of our universe, Level II: universes with
@@ -32,7 +32,7 @@
             structures to explain the existence and interactions of multiple universes. Some other multiverse concepts include
             twin-world models, cyclic theories, M-theory, and black-hole cosmology.</p>
         </section>
-        <section>
+        <section id="Mathematics">
             <h3>Mathematics</h3>
             <p>The subject of infinity and infinite universes, known as the multiverse, was presented in an intense yet whimsical way. Expressing the concept of infinity entertainment injects excitement into the subject matter, triggering in interest in a wider audience.</p>
             <p>The multi-step process for multiverse jumping (also known as verse jumping) introduces the concept of algorithms.
@@ -40,13 +40,13 @@
             <p>The use of charts in quantifying levels of skill for each version of a character involves presenting numbers in a
             graphical way.</p>
         </section>
-        <section>
+        <section id="Art">
           <h3>Art</h3>
             <p>Born in 1970 in Los Angeles, Kurata grew up in the San Gabriel Valley,[1] the youngest of four children.[4] Her parents owned a laundromat.[4] She is Japanese American.[5]</p>
             <p>For <q>Everything Everywhere All at Once</q>, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the <q>main</q> universe to other parts of the multiverse.[11][4] For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget.[12] Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to <q>Just go crazy, get creative</q>, and that they aimed to create costumes that viewers would wear on Halloween.[12]</p>
             <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki,[13] to whom Kurata has said she relates.[4] Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks,[13] exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata.[11] <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother.[11] Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q>[13] Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.[13]</p>
             <p>CBS News said the film's <q>gravitas</q> would not have been possible <q>without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>.[14] Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q>[15]</p>
-        </section>
+        </section id="Me">
         <h2>Me</h2>
         <p>This class is answering questions of mine about:
         How to best arrange things on a web page in aesthetically pleasing manner
