--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
     </header>
     <hr>
     <nav>
-      <a href="#Daniels">The Daniels</a> | <a href="#Physics">Physics</a> | <a href="#Mathematics">Mathematics</a> | <a href="#Art">Art</a> | <a href="#Me">Me</a>
+      <a href="#Daniels">The Daniels</a> | <a href="#Physics">Physics</a> | <a href="#Mathematics">Mathematics</a> | <a href="#Art">Art</a> | <a href="#Me">Me</a> |
     </nav>
-
+    
+    <ul>
+      <li><h2><a href="index.html">Home</a></h2></li>
+      <li><a href="#Daniels">The Daniels</a></li>
+      <li><a href="#Physics">Physics</a></li>
+      <li><a href="#Mathematics">Mathematics</a></li>
+      <li><a href="#Art">Art</a></li>
+      <li><a href="#Me">Me</a></li>
+      <li><h2><a href="faq.html">FAQ</a></h2></li>
+    </ul>
     <main>
+        <section id="Daniels"></section>
         <h2>The Daniels</h2>
         <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson College in
         Boston and began collaborating on various projects. Their breakthrough came with their short film <q>Interesting Ball</q> (2008), which gained viral attention online. It showcased their quirky humor and distinctive visual style, setting the tone for their future work.</p>
@@ -46,7 +56,8 @@
             <p>For <q>Everything Everywhere All at Once</q>, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the <q>main</q> universe to other parts of the multiverse.[11][4] For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget.[12] Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to <q>Just go crazy, get creative</q>, and that they aimed to create costumes that viewers would wear on Halloween.[12]</p>
             <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki,[13] to whom Kurata has said she relates.[4] Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks,[13] exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata.[11] <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother.[11] Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q>[13] Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.[13]</p>
             <p>CBS News said the film's <q>gravitas</q> would not have been possible <q>without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>.[14] Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q>[15]</p>
-        </section id="Me">
+        </section>
+        <section id="Me">
         <h2>Me</h2>
         <p>This class is answering questions of mine about:
         How to best arrange things on a web page in aesthetically pleasing manner
@@ -55,6 +66,7 @@
         Instilling proper structure, style, and functionality to a web page
         How to begin using ChatGPT</p>
         <p>This course assists in expanding my knowledge and skill set in the world of IT.</p>
+        </section>
 </main>
 <hr>
 <footer>
