Finished adding navigation to the FAQ page

--- a/faq.html
+++ b/faq.html
@@ -12,27 +12,28 @@
     </header>
     <hr>
     <nav>
-        <a href="#Daniels">The Daniels</a> | <a href="#Physics">Physics</a> | <a href="#Mathematics">Mathematics</a> |
-        <a href="#Art">Art</a> | <a href="#Me">Me</a> |
+        <a href="#FAQ">FAQ</a> | <a href="#ContactUs">Contact Us</a>
     </nav>
 
     <ul>
-        <li>
-            <h2><a href="index.html">Home</a></h2>
-        </li>
-        <li><a href="#Daniels">The Daniels</a></li>
+        <li><h2><a href="index.html">Home</a></h2></li>
+        <li><a href="#FAQ">The Daniels</a></li>
         <li><a href="#Physics">Physics</a></li>
         <li><a href="#Mathematics">Mathematics</a></li>
         <li><a href="#Art">Art</a></li>
         <li><a href="#Me">Me</a></li>
-        <li>
-            <h2><a href="faq.html">FAQ</a></h2>
-        </li>
+        <li><h2><a href="faq.html">FAQ</a></h2></li>
     </ul>
     <main>
-        <section id="Daniels"></section>
-        <h2>The Daniels</h2>
-        <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively</p> 
+        <section id="FAQ">
+        <h2>FAQ</h2>
+        <p>How often will this site be updated?</p> 
+        </section>
+
+        <section id="ContactUs">
+        <h2>Contact Us</h2>
+        <p>We are happy to help.</p>
+        </section>
     </main>
     <hr>
     <footer>
