Put additional links in footer - hyperlink to an external web site and a link to the webmaster's email address

--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
     </header>
     <hr>
     <nav>
-        <a href="#FAQ">FAQ</a> | <a href="#ContactUs">Contact Us</a>
+        <a href="#FAQ">FAQ</a> | <a href="#Funding">Arts Funding Ideas</a>
     </nav>
 
     <ul>
@@ -23,26 +23,36 @@
         <li><a href="#Art">Art</a></li>
         <li><a href="#Me">Me</a></li>
         <li><h2><a href="faq.html">FAQ</a></h2></li>
+        <li><a href="#FAQ">Frequently Asked Question</a></li>
+        <li><a href="#Funding">Arts Funding Ideas</a></li>
     </ul>
     <main>
         <section id="FAQ">
-        <h2>FAQ</h2>
-        <p>How often will this site be updated?</p> 
+        <h2>Frequently Asked Question</h2>
+        <h3>How often is this site updated?</h3>
+        <p>This site is updated weekly.</p>
         </section>
 
-        <section id="ContactUs">
-        <h2>Contact Us</h2>
-        <p>We are happy to help.</p>
+        <section id="Funding">
+        <h2>Arts Funding Ideas</h2>
+        <p> <a href="www.arts.gov">National Endowment for the Arts</a>.</p>
+        <p>Contact the webmaster</p>
         </section>
     </main>
-    <hr>
+<hr>
     <footer>
-        <pre>
+      <pre>
+      <strong>Arts Funding Ideas</strong>
+      <a href="www.arts.gov">National Endowment for the Arts</a>
+
+      <strong>Webmaster</strong>
+      <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+
       <strong>Physical Address</strong>
       123 Do-ray-me Rd.
-      Piccadilly, NY 01234
-    </pre>
-    </footer>
+      Piccadilly, NY 012345
+      </pre>
+  </footer>
 </body>
 
 </html>
