--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <li><a href="#Mathematics">Mathematics</a></li>
       <li><a href="#Art">Art</a></li>
       <li><a href="#Me">Me</a></li>
-      <li><h2><a href="faq.html">FAQ</a></h2></li>
+      <li><h2><a href="faq.html">Frequently Asked Question</a></h2></li>
+      <li><a href="#FAQ">FAQ</a></li>
+      <li><a href="#Funding">Arts Funding Ideas</a></li>
     </ul>
     <main>
         <section id="Daniels"></section>
@@ -69,12 +71,18 @@
         </section>
 </main>
 <hr>
-<footer>
+  <footer>
     <pre>
+      <strong>Arts Funding Ideas</strong>
+      <a href="www.arts.gov">National Endowment for the Arts</a>
+
+      <strong>Webmaster</strong>
+      <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+
       <strong>Physical Address</strong>
       123 Do-ray-me Rd.
-      Piccadilly, NY 01234
+      Piccadilly, NY 012345
     </pre>
-</footer>
+  </footer>
 </body>
 </html>
