Updated links and formatting on both web pages.  Formatting changed possibly due to VS Code update. Indentation was corrected.

--- a/faq.html
+++ b/faq.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>The Daniels - Their Film and Me</h1>
+      <h1>The Daniels - Their Film and Me</h1>
     </header>
     <hr>
     <nav>
-        <a href="#FAQ">FAQ</a> | <a href="#Funding">Arts Funding Ideas</a>
+      <a href="#FAQ">FAQ</a> | <a href="#NewsEvents">News and Events</a>
     </nav>
 
     <ul>
-        <li><h2><a href="index.html">Home</a></h2></li>
-        <li><a href="#FAQ">The Daniels</a></li>
-        <li><a href="#Physics">Physics</a></li>
-        <li><a href="#Mathematics">Mathematics</a></li>
-        <li><a href="#Art">Art</a></li>
-        <li><a href="#Me">Me</a></li>
-        <li><h2><a href="faq.html">FAQ</a></h2></li>
-        <li><a href="#FAQ">Frequently Asked Question</a></li>
-        <li><a href="#Funding">Arts Funding Ideas</a></li>
+      <li><h2><a href="index.html">Home</a></h2></li>
+      <li><a href="#FAQ">The Daniels</a></li>
+      <li><a href="#Movie">Their Movie</a></li>
+      <li><a href="#Physics">Physics</a></li>
+      <li><a href="#Mathematics">Mathematics</a></li>
+      <li><a href="#Art">Art</a></li>
+      <li><a href="#Me">Me</a></li>
+      <li><h2><a href="faq.html">FAQ</a></h2></li>
+      <li><a href="#FAQ">Frequently Asked Question</a></li>
+      <li><a href="#NewsEvents">News and Events</a></li>
     </ul>
     <main>
-        <section id="FAQ">
-        <h2>Frequently Asked Question</h2>
-        <h3>How often is this site updated?</h3>
-        <p>This site is updated weekly.</p>
-        </section>
+      <section id="FAQ">
+      <h2>Frequently Asked Questions</h2>
+      <h3>How often is this site updated?</h3>
+      <p>This site is updated weekly.</p>
+      <h3>How is this site funded, and what options are available for anyone wanting to fund a website for the arts?</h3>
+      <p>This site is privately funded, however feel free to visit the <a href="www.arts.gov">National Endowment for the Arts</a> for funding options.</p>
+      <h3>How often should I get my engine oil flushed?</h3>
+      <p>Perhaps a site about automotive maintenance would be a better choice for answering your question.</p>
+      <h3>Which is better, mousse or gel?</h3>
+      <p>That is a personal preference and outside the scope of this site.</p>
+      </section>
 
-        <section id="Funding">
-        <h2>Arts Funding Ideas</h2>
-        <p> <a href="www.arts.gov">National Endowment for the Arts</a>.</p>
-        <p>Contact the webmaster</p>
-        </section>
+      <section id="NewsEvents">
+      <h2>News and Events</h2>
+      <p> Feel free to visit <a href="https://www.theartnewspaper.com/">The Art Newspaper</a> to keep up with international art news and events.</p>
+      </section>
     </main>
-<hr>
+    <hr>
     <footer>
       <pre>
-      <strong>Arts Funding Ideas</strong>
-      <a href="www.arts.gov">National Endowment for the Arts</a>
+      <strong>News and Events</strong>
+      <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
 
-      <strong>Webmaster</strong>
+      <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
       <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
 
       <strong>Physical Address</strong>
       123 Do-ray-me Rd.
-      Piccadilly, NY 012345
+      Piccadilly, NY 01234
       </pre>
-  </footer>
-</body>
+    </footer>
+  </body>
 
 </html>
