Created HTML table with headers and table data without CSS.

--- a/faq.html
+++ b/faq.html
@@ -38,6 +38,82 @@
       <p>Perhaps a site about automotive maintenance would be a better choice for answering your question.</p>
       <h3>Which is better, mousse or gel?</h3>
       <p>That is a personal preference and outside the scope of this site.</p>
+      <h3>What are some of the songs on the <q>Everything Everywhere All at Once</q> soundtrack?</h3>
+      <p>Below are some songs from the Everything Everywhere All at Once Soundtrack.</p>
+      <table>
+        <caption>Table with Song Titles, Songwriters, and Song Lengths</caption>
+        <thead>
+          <tr>
+            <th>&nbsp;</th>
+            <th scope="col" abbr="Column 1" id="hdr_song">Song Titles</th>
+            <th scope="col" abbr="Column 2" id="hdr_songwriter">Songwriter(s)</th>
+            <th scope="col" abbr="Column 3" id="hdr_length">Length in Minutes and Seconds</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td headers="hdr_song"><q>Wang Family Portrait</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">1:47</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td headers="hdr_song"><q>Vvvery Busy</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">2:05</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td headers="hdr_song"><q>Nothing Could Possibly Matter More</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">2:22</td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td headers="hdr_song"><q>The Fanny Pack</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">1:49</td>
+          </tr>
+          <tr>
+            <th scope="row">5</th>
+            <td headers="hdr_song"><q>Jobu Tupaki</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">2:03</td>
+          </tr>
+          <tr>
+            <th scope="row">6</th>
+            <td headers="hdr_song"><q>I Love You Kung Fu</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">1:46</td>
+          </tr>
+          <tr>
+            <th scope="row">7</th>
+            <td headers="hdr_song"><q>You're Living Your Worst You</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">2:27</td>
+          </tr>
+          <tr>
+            <th scope="row">8</th>
+            <td headers="hdr_song"><q>Pinky Fight</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">1:14</td>
+          </tr>
+          <tr>
+            <th scope="row">9</th>
+            <td headers="hdr_song"><q>Specks of Time</q></td>
+            <td headers="hdr_songwriter">Son Lux - Benjamin</td>
+            <td headers="hdr_length">2:49</td>
+          </tr>
+          <tr>
+            <th scope="row">10</th>
+            <td headers="hdr_song"><q>Sucked Into a Bagel</q></td>
+            <td headers="hdr_songwriter">Son Lux</td>
+            <td headers="hdr_length">2:30</td>
+          </tr>
+        </tbody>
+      </table>
+      
       </section>
 
       <section id="NewsEvents">
