Found and fixed error (: to = after href) in link to CSS file in HTML file (faq.html) to it

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
-    <link rel="stylesheet" href:"css/table.css">
+    <link rel="stylesheet" href="css/table.css">
   </head>
 
   <body>
