Found and corrected issues with links between pages on both pages (ex. faq.html#FAQ)

--- a/faq.html
+++ b/faq.html
@@ -18,12 +18,12 @@
 
     <ul>
       <li><h2><a href="index.html">Home</a></h2></li>
-      <li><a href="#FAQ">The Daniels</a></li>
-      <li><a href="#Movie">Their Movie</a></li>
-      <li><a href="#Physics">Physics</a></li>
-      <li><a href="#Mathematics">Mathematics</a></li>
-      <li><a href="#Art">Art</a></li>
-      <li><a href="#Me">Me</a></li>
+      <li><a href="index.html#Daniels">The Daniels</a></li>
+      <li><a href="index.html#Movie">Their Movie</a></li>
+      <li><a href="index.html#Physics">Physics</a></li>
+      <li><a href="index.html#Mathematics">Mathematics</a></li>
+      <li><a href="index.html#Art">Art</a></li>
+      <li><a href="index.html#Me">Me</a></li>
       <li><h2><a href="faq.html">FAQ</a></h2></li>
       <li><a href="#FAQ">Frequently Asked Question</a></li>
       <li><a href="#NewsEvents">News and Events</a></li>
