--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <li><a href="#Art">Art</a></li>
       <li><a href="#Me">Me</a></li>
       <li><h2><a href="faq.html">Frequently Asked Questions</a></h2></li>
-      <li><a href="#FAQ">FAQ</a></li>
-      <li><a href="#NewsEvents">News and Events</a></li>
+      <li><a href="faq.html#FAQ">FAQ</a></li>
+      <li><a href="faq.html#NewsEvents">News and Events</a></li>
     </ul>
     <main>
       <section id="Daniels">
