Removed citation references, site pages were placed in the navigation menu, site pages were removed from list of headings

--- a/faq.html
+++ b/faq.html
@@ -13,18 +13,10 @@
     </header>
     <hr>
     <nav>
-      <a href="#FAQ">FAQ</a> | <a href="#NewsEvents">News and Events</a>
+      <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a>
     </nav>
 
     <ul>
-      <li><h2><a href="index.html">Home</a></h2></li>
-      <li><a href="index.html#Daniels">The Daniels</a></li>
-      <li><a href="index.html#Movie">Their Movie</a></li>
-      <li><a href="index.html#Physics">Physics</a></li>
-      <li><a href="index.html#Mathematics">Mathematics</a></li>
-      <li><a href="index.html#Art">Art</a></li>
-      <li><a href="index.html#Me">Me</a></li>
-      <li><h2><a href="faq.html">FAQ</a></h2></li>
       <li><a href="#FAQ">Frequently Asked Question</a></li>
       <li><a href="#NewsEvents">News and Events</a></li>
     </ul>
