--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
     </nav>
 
     <ul>
-      <li><a href="#FAQ">Frequently Asked Question</a></li>
+      <li><a href="#FAQ">Frequently Asked Questions</a></li>
       <li><a href="#NewsEvents">News and Events</a></li>
     </ul>
     <main>
@@ -26,7 +26,7 @@
       <h3>How often is this site updated?</h3>
       <p>This site is updated weekly.</p>
       <h3>How is this site funded, and what options are available for anyone wanting to fund a website for the arts?</h3>
-      <p>This site is privately funded, however feel free to visit the <a href="www.arts.gov">National Endowment for the Arts</a> for funding options.</p>
+      <p>This site is privately funded, however feel free to visit the <a href="https://www.arts.gov">National Endowment for the Arts</a> for funding options.</p>
       <h3>How often should I get my engine oil flushed?</h3>
       <p>Perhaps a site about automotive maintenance would be a better choice for answering your question.</p>
       <h3>Which is better, mousse or gel?</h3>
