Added target="_blank" to all links to external websites, created test.html to test styling, create style.css and entered all required styles, have not yet linked style.css to test.html

--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
       <h3>How often is this site updated?</h3>
       <p>This site is updated weekly.</p>
       <h3>How is this site funded, and what options are available for anyone wanting to fund a website for the arts?</h3>
-      <p>This site is privately funded, however feel free to visit the <a href="https://www.arts.gov">National Endowment for the Arts</a> for funding options.</p>
+      <p>This site is privately funded, however feel free to visit the <a href="https://www.arts.gov" target="_blank">National Endowment for the Arts</a> for funding options.</p>
       <h3>How often should I get my engine oil flushed?</h3>
       <p>Perhaps a site about automotive maintenance would be a better choice for answering your question.</p>
       <h3>Which is better, mousse or gel?</h3>
@@ -111,17 +111,17 @@
 
       <section id="NewsEvents">
       <h2>News and Events</h2>
-      <p> Feel free to visit <a href="https://www.theartnewspaper.com/">The Art Newspaper</a> to keep up with international art news and events.</p>
+      <p> Feel free to visit <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a> to keep up with international art news and events.</p>
       </section>
     </main>
     <hr>
     <footer>
     <pre>
     <strong>News and Events</strong>
-    <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
+    <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a>
 
     <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
-    <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+    <a href="mailto:cican42814@gmail.com" target="_blank">Email Webmaster</a>
 
     <strong>Physical Address</strong>
     123 Do-ray-me Rd.
