--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
      <footer>
      <pre>
       <strong>News and Events</strong>
-      <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
+      <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a>
 
       <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
-      <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+      <a href="mailto:cican42814@gmail.com" target="_blank">Email Webmaster</a>
 
       <strong>Physical Address</strong>
       123 Do-ray-me Rd.
